--- a/package.json
+++ b/package.json
@@ -28,16 +28,14 @@
     "react-dom": "^18.3.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "5.0.1",
-    "redux": "^5.0.1",
-    "redux-thunk": "^3.1.0",
+    "react-thunk": "^3.1.0",
     "sass": "^1.81.0",
     "web-vitals": "^2.1.4",
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/react": "18.3.12",   // <--- BURAYI GÜNCELLEDİK!
-    "@types/react-dom": "18.3.12" // <--- BURAYI GÜNCELLEDİK!
+    "@types/react": "18.3.12",
+    "@types/react-dom": "18.3.12"
   },
   "scripts": {
     "start": "react-scripts start",
