--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
     "@emotion/react": "^11.13.3",
     "@emotion/styled": "^11.13.0",
     "@material-ui/core": "^4.12.4",
-    "@material-ui/icons": "^4.11.3",    
-    "@material-ui/lab": "^4.0.0-alpha.61", 
-    "@material-ui/material": "4.12.4", 
+    "@mui/icons-material": "^6.1.7",
+    "@mui/lab": "^6.0.0-beta.15",
+    "@mui/material": "^6.1.7",
     "@mui/x-charts": "^7.22.2",
     "@mui/x-data-grid": "^7.22.2",
     "@mui/x-date-pickers": "^7.22.2",
@@ -24,11 +24,11 @@
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^17.0.2",     
+    "react-dom": "^17.0.2", 
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.28.0",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "redux-thunk": "^3.1.0",
     "sass": "^1.81.0",
@@ -36,8 +36,8 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/react": "18.3.12",
-    "@types/react-dom": "18.3.12"
+    "@types/react": "^17.0.0",   
+    "@types/react-dom": "^17.0.0"
   },
   "scripts": {
     "start": "react-scripts start",
