--- a/package.json
+++ b/package.json
@@ -24,9 +24,9 @@
     "moment": "^2.30.1",
     "notistack": "^3.0.1",
     "prop-types": "^15.8.1",
-    "react": "^17.0.2",     
-    "react-dom": "^17.0.2", 
-    "react-redux": "^9.1.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-redux": "^7.2.9",  // <-- BURADA SÜRÜM DÜŞÜRÜLDÜ
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
@@ -36,7 +36,7 @@
     "yup": "^1.4.0"
   },
   "devDependencies": {
-    "@types/react": "^17.0.0",   
+    "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0"
   },
   "scripts": {
