--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "prop-types": "^15.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-redux": "^7.2.9",  // <-- BURADA SÜRÜM DÜŞÜRÜLDÜ
+    "react-redux": "^7.2.9",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
     "redux": "^5.0.1",
